package example.designpattern.behavioral.mediator;

//按钮类：具体同事类
class Button extends Component {  
    public void update() {  
        //按钮不产生交互  
    }  
}  